# makara

./: CLAUDE.md  README.md  index.html  pyproject.toml  setup.py
src/makara/: __init__.py  core.py  sentiment.py  topics.py
tests/: test_core.py  test_sentiment.py  test_topics.py
